🐛 FIX: section customizer, color and spacing

--- a/assets/styles/responsive/desktop.scss
+++ b/assets/styles/responsive/desktop.scss
@@ -8,6 +8,7 @@ body.frontend {
 
   .hidden_desktop {
     opacity: 0;
+    pointer-events: none;
   }
 
   &.active-menu {
