--- a/assets/styles/theme-blocks.scss
+++ b/assets/styles/theme-blocks.scss
@@ -306,7 +306,7 @@ body.frontend,
         position: relative;
       }
       > ul {
-        overflow-x: hidden!important;
+        // overflow-x: hidden!important;
         list-style: none;
         padding: 0;
         > .block-editor-inner-blocks {
